--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,19 @@
 			<artifactId>rhino</artifactId>
 			<version>equal-graphs-values-Rhino1_7R4_RELEASE-g697fec4-1165</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.github.bThink-BGU</groupId>
+			<artifactId>StateSpaceMapper</artifactId>
+			<version>0.4.10</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.github.bthink-bgu</groupId>
+					<artifactId>BPjs</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
