--- a/pom.xml
+++ b/pom.xml
@@ -41,17 +41,19 @@
 			<version>equal-graphs-values-Rhino1_7R4_RELEASE-g697fec4-1165</version>
 		</dependency>
 
-		<dependency>
+		<!-- StateSpaceMapper for debugging	-->
+		<!--<dependency>
 			<groupId>com.github.bThink-BGU</groupId>
 			<artifactId>StateSpaceMapper</artifactId>
 			<version>0.4.10</version>
+			<scope>test</scope>
 			<exclusions>
 				<exclusion>
 					<groupId>com.github.bthink-bgu</groupId>
 					<artifactId>BPjs</artifactId>
 				</exclusion>
 			</exclusions>
-		</dependency>
+		</dependency>-->
 
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
