--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -12,9 +12,6 @@ on:
         required: false
         default: ""
 
-env:
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
@@ -27,8 +24,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Extract next version
         run: |
           echo "VER_MINOR=$((`sed -nE 's|<version>[0-9]+\.[0-9]+\.([0-9]*)<.*|\1|p' pom.xml | head -n 1` + 1))" >> $GITHUB_ENV
@@ -44,11 +40,10 @@ jobs:
           perl -pi -e '$a=1 if(!$a && s|(<version>[0-9]+\.[0-9]+\.)[0-9]*|${1}${{ env.VER_MINOR }}|);' README.md
           
       - uses: EndBug/add-and-commit@v9
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
+          author_name: Achiya Elyasaf
+          author_email: 10044875+achiyae@users.noreply.github.com
           message: raise version
-          default_author: github_actions
           
       - name: Set SHA version
         id: vars
