--- a/pom.xml
+++ b/pom.xml
@@ -130,7 +130,7 @@
                                     <transformers>
                                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                             <manifestEntries>
-                                                <Main-Class>il.ac.bgu.cs.bp.bpjs.mains.BPjsCliRunner</Main-Class>
+                                                <Main-Class>il.ac.bgu.cs.bp.bpjs.context.CliRunner</Main-Class>
                                             </manifestEntries>
                                         </transformer>
                                     </transformers>
